--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 
 MilleniumIOS.xcodeproj/xcuserdata/tomaveclevdsl.xcuserdatad/xcschemes/xcschememanagement.plist
+MilleniumIOS.xcworkspace/xcuserdata/tomaveclevdsl.xcuserdatad/UserInterfaceState.xcuserstate
