--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 
 MilleniumIOS.xcodeproj/xcuserdata/tomaveclevdsl.xcuserdatad/xcschemes/xcschememanagement.plist
 MilleniumIOS.xcworkspace/xcuserdata/tomaveclevdsl.xcuserdatad/UserInterfaceState.xcuserstate
+MilleniumIOS.xcworkspace/xcuserdata/tomaveclevdsl.xcuserdatad/UserInterfaceState.xcuserstate
