Api change and adding animations
Changed the main API where we get the title and last 5 titles
Added animations becasue why not :)
V1.0.2

--- a/MilleniumIOS/Info.plist
+++ b/MilleniumIOS/Info.plist
@@ -7,7 +7,7 @@
 		<string>com.station-millenium.apple.player.refreshlast5title</string>
 	</array>
 	<key>CFBundleDevelopmentRegion</key>
-	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<string>fr_FR</string>
 	<key>CFBundleDisplayName</key>
 	<string>Station Millenium</string>
 	<key>CFBundleExecutable</key>
